modified html files, fixed routes

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 ### Code-Java ###
 # Language Support for Java(TM) by Red Hat extension for Visual Studio Code - https://marketplace.visualstudio.com/items?itemName=redhat.java
 
+/thymeleafExample/src/main/resources/templates/images
+
 .project
 .classpath
 factoryConfiguration.json
